# ritm_t_t

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.cfg  test_requests.py
app/: helpers.py  main.py
app/core/: config.py  db_helper.py
data/: templates.json
