[tool.poetry]
name = "ritm-t-t"
version = "0.1.0"
description = ""
authors = ["VladlmlrF <vladimirfalin84@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standart"], version = "^0.32.1"}
pymongo = "^4.10.1"
pydantic-settings = "^2.6.1"
requests = "^2.32.3"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
